--- a/index.css
+++ b/index.css
@@ -1,12 +1,148 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital@1&display=swap');
+body{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
+
+}
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif; }
+  margin: 0; }
 
+  a{
+    position: absolute;
+    padding: 5px 20px;
+    display: inline-block;
+    margin-top: 20px;
+    right: 0%;
+    text-decoration: none;
+    color: #fff;
+    background: rgb(56, 55, 55);
+    bottom: 95%;
+    border-radius: 3px;
+    z-index: 1;
+}
+ 
+.container-fluid.active{
+    filter: blur(20px);
+    pointer-events: none;
+    user-select: none;
+}
+.canvas-bak {
+  width: 700px;
+  height: 602px;
+  /* background: antiquewhite; */
+  z-index: -1;
+  position: absolute;
+  top: 6.5%;
+  left: 7.2%;
+  filter: blur(3px);
+  background-color: #fff;
+}
+.canvas-bak img{
+  width: 100%;
+  height: 100%;
+}
+#popup{
+    overflow: hidden;
+    position: fixed;
+    top: -10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 50px;
+    box-shadow: 0 5px 30px rgb(0 0 0 / 30%);
+    background: #fff;
+    border-radius: 10px;
+    width: 50%;
+    height: 279px;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    z-index: 1;
+    
+}
+#popup a{
+  position: relative;
+  padding: 5px 20px;
+  display: inline-block;
+  margin-top: 20px;
+  /* right: 0%; */
+  text-decoration: none;
+  color: #fff;
+  background: rgb(56, 55, 55);
+  bottom: 86%;
+  border-radius: 3px;
+  z-index: 1;
+}
+h2 {
+  font-size: 600;
+  margin-bottom: 10px;
+  color: #333;
+  transform: translateY(-39px);
+  text-align: center;
+}
+#popup.active{
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s;
+    top: 30%;
+    
+}
+.slider {
+    width: 955px;
+    height: 260px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(-18px,-28px);
+}
+
+.slider2 {
+  width: 955px;
+  height: 260px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translate(50px,0px);
+}
+
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 45%;
+  left: 3%;
+}
+.prev {
+  cursor: pointer;
+  position: absolute;
+  top: 46%;
+  right: 0%;
+}
+.image {
+    cursor: pointer;
+    width: 50%;
+    height: 47%;
+    margin-right: 10px;
+    overflow: hidden;
+    border-radius: 10px;
+    transform: translateY(-55px);
+    border: 1px solid #6e6e6e;
+}
+.image:hover {
+    transform: translateY(-60px);
+    transition: 0.5s;
+}
+img {
+        width: 100%;       
+}
+input{
+    display:none;
+}
 .container-fluid {
   min-height: 100vh;
-  background: #c0c0c049;
+  background: #fffdfd49;
   display: grid; }
   .container-fluid .header {
     position: relative;
@@ -44,11 +180,13 @@
         padding: 5px 5px;
         border: 1px solid #8d8a8a;
         border-radius: 6px;
-        color: #333333b8; }
+        color: #333333b8; 
+        cursor: pointer;
+      }
         .container-fluid .menu-left .menu-item .btn i.fas.fa-level-down-alt {
           transform: translate(4px, 1px); }
         .container-fluid .menu-left .menu-item .btn:active {
-          background: #b3b1b1;
+          background: #c5c5c553;
           color: #fff;
           outline: 1px solid #333; }
         .container-fluid .menu-left .menu-item .btn:hover {
@@ -93,16 +231,18 @@
         .container-fluid .menu-left .menu-item.boxShow-pen .table-size .size1:active, .container-fluid .menu-left .menu-item.boxShow-pen .table-size .size2:active, .container-fluid .menu-left .menu-item.boxShow-pen .table-size .size3:active, .container-fluid .menu-left .menu-item.boxShow-pen .table-size .size4:active {
           background: #a0a0a0; }
   .container-fluid canvas#canvas {
-    background: #fff;
+    opacity: 0.8;
     position: absolute;
-    top: 5.5%;
-    left: 6.2%; }
+    left: 4.9%;
+    top: 6%;
+     }
   .container-fluid .menu-bottom {
     width: 100%;
     height: 71px;
     background: aliceblue;
     position: absolute;
-    bottom: 0; }
+    bottom: 0; 
+    z-index: 3;}
     .container-fluid .menu-bottom .menu {
       display: flex;
       margin-left: 63px; }
@@ -115,7 +255,9 @@
           border-radius: 6px;
           color: #333333b8;
           height: 25px;
-          margin-bottom: 2px; }
+          margin-bottom: 2px; 
+          cursor: pointer;
+        }
           .container-fluid .menu-bottom .menu .menu-item .btn .table-size {
             border: 1px solid #8c8888;
             border-radius: 5px;
